bdr.BDR.scala.error
Erreur de compilation :
BDR:3: error: not found: value doite
    doite()
    ^